# QuarkEngine

./: .gitignore  CMakeLists.txt  imgui.ini  run.sh
assets/: lighting.fs  lighting.vs
projects/TestProject/: scene.json
projects/cc/resources/: sosna.glb
quark-libs/imgui/include/: imgui_widgets.cpp
src/: ImGuizmo.cpp  camera.cpp  editor.cpp  hub.cpp  lighting.cpp  main.cpp  models.cpp  project.cpp  rlights.cpp  scene.cpp  tex.cpp
src/headers/: camera.h  editor.h  entity.h  hub.h  lighting.h  models.h  project.h  rlights.h  scene.h  tex.h
